--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,11 @@ spring.config.name=Hamburgueria_OO24S
 
 
 # DATASOURCE
-spring.datasource.driver-class-name=
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.driver-class-name= org.postgresql.Driver
+spring.datasource.url= jdbc:postgresql://localhost:3306/hamburgueria
+spring.datasource.username=root
+spring.datasource.password=flpzwk33
+
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
