Item, Order and Package struture

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.config.name=Hamburgueria_OO24S
 
 # DATASOURCE
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.url= jdbc:postgresql://localhost:3306/hamburgueria
-spring.datasource.username=root
+spring.datasource.url= jdbc:postgresql://localhost:5432/hamburgueria
+spring.datasource.username=postgres
 spring.datasource.password=flpzwk33
 
 #JPA
